WIP: arm64: dts: meson-g12a: add missing drive-strength for sdcard, sdio and hdmi ddc

--- a/arch/arm64/boot/dts/amlogic/meson-g12a.dtsi
+++ b/arch/arm64/boot/dts/amlogic/meson-g12a.dtsi
@@ -212,6 +212,7 @@
 								 "hdmitx_sck";
 							function = "hdmitx";
 							bias-disable;
+							drive-strength = <4000>;
 						};
 					};
 
@@ -302,6 +303,7 @@
 								 "sdcard_clk_c";
 							function = "sdcard";
 							bias-pull-up;
+							drive-strength = <4000>;
 						};
 					};
 
@@ -323,6 +325,7 @@
 								 "sdcard_clk_z";
 							function = "sdcard";
 							bias-pull-up;
+							drive-strength = <4000>;
 						};
 					};
 
@@ -343,7 +346,8 @@
 								 "sdio_cmd",
 								 "sdio_clk";
 							function = "sdio";
-							bias-disable;
+							bias-pull-up;
+							drive-strength = <4000>;
 						};
 					};
 
