WIP: arm64: dts: meson: g12a: add drive strength for eth pins

--- a/arch/arm64/boot/dts/amlogic/meson-g12a.dtsi
+++ b/arch/arm64/boot/dts/amlogic/meson-g12a.dtsi
@@ -277,6 +277,7 @@
 								 "eth_txd0",
 								 "eth_txd1";
 							function = "eth";
+							drive-strength = <4000>;
 							bias-disable;
 						};
 					};
@@ -289,6 +290,7 @@
 								 "eth_txd2_rgmii",
 								 "eth_txd3_rgmii";
 							function = "eth";
+							drive-strength = <4000>;
 							bias-disable;
 						};
 					};
