ARM: dts: meson: shorten Odroid C1 audio card name
Signed-off-by: Christian Hewitt <christianshewitt@gmail.com>

--- a/arch/arm/boot/dts/meson8b-odroidc1.dts
+++ b/arch/arm/boot/dts/meson8b-odroidc1.dts
@@ -107,7 +107,7 @@
 
 	sound {
 		compatible = "amlogic,gx-sound-card";
-		model = "M8B-ODROID-C1";
+		model = "ODROID-C1";
 
 		assigned-clocks = <&clkc CLKID_MPLL0>,
 				  <&clkc CLKID_MPLL1>;
