--- a/arch/arm/boot/dts/meson8m2-wetek-core.dts
+++ b/arch/arm/boot/dts/meson8m2-wetek-core.dts
@@ -79,6 +79,17 @@
 		};
 	};
 
+	hdmi-connector {
+		compatible = "hdmi-connector";
+		type = "a";
+
+		port {
+			hdmi_connector_in: endpoint {
+				remote-endpoint = <&hdmi_tx_tmds_out>;
+			};
+		};
+	};
+
 	reserved-memory {
 		trustzone-firmware@6100000 {
 			reg = <0x6100000 0x3000000>;
@@ -110,6 +121,38 @@
 
 		clocks = <&rtc_xin>;
 		clock-names = "ext_clock";
+	};
+
+	sound {
+		compatible = "amlogic,gx-sound-card";
+		model = "WETEK-CORE";
+
+		assigned-clocks = <&clkc CLKID_MPLL0>,
+				  <&clkc CLKID_MPLL1>;
+		assigned-clock-rates = <294912000>,
+				       <270950400>;
+
+		dai-link-0 {
+			sound-dai = <&aiu AIU_CPU CPU_I2S_FIFO>;
+		};
+
+		dai-link-1 {
+			sound-dai = <&aiu AIU_CPU CPU_I2S_ENCODER>;
+			dai-format = "i2s";
+			mclk-fs = <256>;
+
+			codec-0 {
+				sound-dai = <&aiu AIU_HDMI CTRL_I2S>;
+			};
+		};
+
+		dai-link-2 {
+			sound-dai = <&aiu AIU_HDMI CTRL_OUT>;
+
+			codec-0 {
+				sound-dai = <&hdmi_tx 0>;
+			};
+		};
 	};
 
 	vcc_1v8: regulator-vcc-1v8 {
@@ -215,6 +258,10 @@
 		regulator-boot-on;
 		regulator-always-on;
 	};
+};
+
+&aiu {
+	status = "okay";
 };
 
 &cpu0 {
@@ -399,6 +446,18 @@
 			  "RGMII_RST#", "IR", "", "FRONT_CS",
 			  "I2C_SDA_AO", "I2C_SCK_AO", "HDMI_CEC",
 			  "IR_BLASTER", "";
+};
+
+&hdmi_tx {
+	status = "okay";
+	pinctrl-0 = <&hdmi_hpd_pins>, <&hdmi_i2c_pins>;
+	pinctrl-names = "default";
+};
+
+&hdmi_tx_tmds_port {
+	hdmi_tx_tmds_out: endpoint {
+		remote-endpoint = <&hdmi_connector_in>;
+	};
 };
 
 &ir_receiver {
