--- a/arch/arm/boot/dts/meson8m2-wetek-core.dts
+++ b/arch/arm/boot/dts/meson8m2-wetek-core.dts
@@ -596,6 +596,14 @@
 	pinctrl-names = "default";
 };
 
+&usb0 {
+	status = "okay";
+};
+
+&usb0_phy {
+	status = "okay";
+};
+
 &usb1 {
 	status = "okay";
 };
