ARM: dts: meson: add Broadcom WiFi to WeTek Core
Signed-off-by: Christian Hewitt <christianshewitt@gmail.com>

--- a/arch/arm/boot/dts/meson8m2-wetek-core.dts
+++ b/arch/arm/boot/dts/meson8m2-wetek-core.dts
@@ -535,9 +535,9 @@
 };
 
 &sdhc {
-	status = "disabled"; // TODO: until pinctrl is updated...
+	status = "okay";
 
-	// TODO: pinctrl-0 = <&sdxc_a_pins>;
+	pinctrl-0 = <&sdxc_a_pins>;
 	pinctrl-names = "default";
 
 	bus-width = <4>;
@@ -549,6 +549,11 @@
 
 	vmmc-supply = <&vcc_3v3>;
 	vqmmc-supply = <&vddio_ao_3v3>;
+
+	brcmf: wifi@1 {
+		reg = <1>;
+		compatible = "brcm,bcm4329-fmac";
+	};
 };
 
 &sdio {
