WIP: arm64: dts: meson-gxbb: add dvb pinctrl nodes
Add pinctrl nodes for dvb_p_ts0 and dvb_s_ts0

Signed-off-by: Christian Hewitt <christianshewitt@gmail.com>

--- a/arch/arm64/boot/dts/amlogic/meson-gxbb.dtsi
+++ b/arch/arm64/boot/dts/amlogic/meson-gxbb.dtsi
@@ -736,6 +736,22 @@
 				bias-disable;
 			};
 		};
+
+		dvb_p_ts0_pins: dvb_p_ts0_pins {
+			mux {
+				groups = "dvb_p_ts0";
+				function = "dvb_p_ts0";
+				bias-disable;
+			};
+		};
+
+		dvb_s_ts0_pins: dvb_s_ts0_pins {
+			mux {
+				groups = "dvb_s_ts0";
+				function = "dvb_s_ts0";
+				bias-disable;
+			};
+		};
 	};
 };
 
