--- a/arch/arm64/boot/dts/amlogic/meson-gxbb-wetek-play2.dts
+++ b/arch/arm64/boot/dts/amlogic/meson-gxbb-wetek-play2.dts
@@ -102,6 +102,30 @@
 	pinctrl-names = "default";
 };
 
+&demux {
+	compatible = "meson,dvb";
+	dev_name = "wetek-dvb";
+	status = "okay";
+
+	fec_reset_gpio-gpios = <&gpio GPIOY_13 GPIO_ACTIVE_HIGH>;
+	power_ctrl_gpio-gpios = <&gpio GPIOY_15 GPIO_ACTIVE_LOW>;
+
+	/* parallel/serial/disable */
+	ts0 = "parallel";
+	ts0_control = <0>;
+	ts0_invert = <0>;
+
+	pinctrl-names = "p_ts0", "s_ts0";
+	pinctrl-0 = <&dvb_p_ts0_pins>;
+	pinctrl-1 = <&dvb_s_ts0_pins>;
+
+	/* resets = <&clock GCLK_IDX_DEMUX
+		  &clock GCLK_IDX_ASYNC_FIFO
+		  &clock GCLK_IDX_AHB_ARB0
+		  &clock GCLK_IDX_HIU_PARSER_TOP>;
+	reset-names = "demux", "asyncfifo", "ahbarb0", "uparsertop"; */
+};
+
 &i2c_A {
 	status = "okay";
 	pinctrl-0 = <&i2c_a_pins>;
