WIP/9000: arm64: rockchip: rk3288: disable VPU iommu
Due to bug in either hantro, iommu or general dma management drivers for ARMv7
buffers are not correctly flushed when being re-used.

To work around that, disable VPU iommu and increase cma memory size to be
sufficient for 4K H.264 decoding.

Signed-off-by: Alex Bee <knaerzche@gmail.com>

--- a/arch/arm/boot/dts/rockchip/rk3288.dtsi
+++ b/arch/arm/boot/dts/rockchip/rk3288.dtsi
@@ -1294,6 +1294,7 @@
 		clock-names = "aclk", "iface";
 		#iommu-cells = <0>;
 		power-domains = <&power RK3288_PD_VIDEO>;
+		status = "disabled";
 	};
 
 	hevc: hevc@ff9c0000 {
