PROB-NOT-REQD: ARM: dts: rockchip: standardise simple-audio-card,name(s)
/* This patch is probably not required as the alsa conf can be
 * keyed against the driver name (as with Amlogic) instead of
 * using the card name.
 */

Standardise simple-audio-card names to one-of: Analog, HDMI,
HDMI{01}, or SPDIF to allow distro maintainers to package a
single alsa conf defining basic audio routing for normal use
cases (e.g. HDMI output) instead of needing to package many
board-specific confs. This also avoids alsa conf mismatching
caused by alsa truncating long card names at 14 characters.

Signed-off-by: Christian Hewitt <christianshewitt@gmail.com>

--- a/arch/arm/boot/dts/rockchip/rk3036-kylin.dts
+++ b/arch/arm/boot/dts/rockchip/rk3036-kylin.dts
@@ -65,7 +65,7 @@
 	sound {
 		compatible = "simple-audio-card";
 		simple-audio-card,format = "i2s";
-		simple-audio-card,name = "rockchip,rt5616-codec";
+		simple-audio-card,name = "Analog";
 		simple-audio-card,mclk-fs = <512>;
 		simple-audio-card,widgets =
 			"Microphone", "Microphone Jack",
