PROB-NOT-REQD: arm64: dts: rockchip: standardise simple-audio-card,name(s)
/* This patch is probably not required as the alsa conf can be
 * keyed against the driver name (as with Amlogic) instead of
 * using the card name.
 */

Standardise simple-audio-card,name values to one-of:

- Analog
- HDMI
- HDMI{01}
- Speaker
- SPDIF

This allow distro maintainers to package a single alsa conf
defining basic audio routing for normal use-cases (e.g. HDMI
output) instead of needing to package many board-specific
confs. This also mitigates name/conf mismatches caused by
alsa truncating card names at 14 characters.

Signed-off-by: Christian Hewitt <christianshewitt@gmail.com>

--- a/arch/arm64/boot/dts/rockchip/rk3399-eaidk-610.dts
+++ b/arch/arm64/boot/dts/rockchip/rk3399-eaidk-610.dts
@@ -132,7 +132,7 @@
 
 	rt5651-sound {
 		compatible = "simple-audio-card";
-		simple-audio-card,name = "realtek,rt5651-codec";
+		simple-audio-card,name = "Analog";
 		simple-audio-card,format = "i2s";
 		simple-audio-card,mclk-fs = <256>;
 		simple-audio-card,widgets =
