--- a/arch/arm64/boot/dts/rockchip/rk3568-wolfvision-pf5.dts
+++ b/arch/arm64/boot/dts/rockchip/rk3568-wolfvision-pf5.dts
@@ -59,7 +59,7 @@
 
 	pdm_sound: pdm-sound {
 		compatible = "simple-audio-card";
-		simple-audio-card,name = "microphone";
+		simple-audio-card,name = "Analog";
 
 		simple-audio-card,cpu {
 			sound-dai = <&pdm>;
