--- a/arch/arm64/boot/dts/rockchip/rk3566-quartz64-a.dts
+++ b/arch/arm64/boot/dts/rockchip/rk3566-quartz64-a.dts
@@ -77,7 +77,7 @@
 	rk817-sound {
 		compatible = "simple-audio-card";
 		simple-audio-card,format = "i2s";
-		simple-audio-card,name = "Analog RK817";
+		simple-audio-card,name = "Analog";
 		simple-audio-card,mclk-fs = <256>;
 
 		simple-audio-card,cpu {
