--- a/arch/arm64/boot/dts/rockchip/rk3588-firefly-itx-3588j.dts
+++ b/arch/arm64/boot/dts/rockchip/rk3588-firefly-itx-3588j.dts
@@ -51,7 +51,7 @@
 		simple-audio-card,format = "i2s";
 		simple-audio-card,hp-det-gpios = <&gpio1 RK_PC4 GPIO_ACTIVE_LOW>;
 		simple-audio-card,mclk-fs = <384>;
-		simple-audio-card,name = "rockchip_es8323";
+		simple-audio-card,name = "Analog";
 		simple-audio-card,pin-switches = "Headphones", "Speaker";
 		simple-audio-card,routing =
 			"Speaker Amplifier INL", "LOUT2",
