--- a/arch/arm64/boot/dts/rockchip/rk3588-tiger-haikou.dts
+++ b/arch/arm64/boot/dts/rockchip/rk3588-tiger-haikou.dts
@@ -76,7 +76,7 @@
 	i2s3-sound {
 		compatible = "simple-audio-card";
 		simple-audio-card,format = "i2s";
-		simple-audio-card,name = "Haikou,I2S-codec";
+		simple-audio-card,name = "Analog";
 		simple-audio-card,mclk-fs = <512>;
 		simple-audio-card,frame-master = <&sgtl5000_codec>;
 		simple-audio-card,bitclock-master = <&sgtl5000_codec>;
