WIP: arm64: dts: amlogic: add kaslr-seed to g12-common dtsi
Add an initial kaslr-seed value so that KASLR is not auto
disabled due to lack of seed.

Signed-off-by: Christian Hewitt <christianshewitt@gmail.com>

--- a/arch/arm64/boot/dts/amlogic/meson-g12-common.dtsi
+++ b/arch/arm64/boot/dts/amlogic/meson-g12-common.dtsi
@@ -29,6 +29,8 @@
 		#size-cells = <2>;
 		ranges;
 
+		kaslr-seed = <0x00000000 0x10000000>;
+
 		simplefb_cvbs: framebuffer-cvbs {
 			compatible = "amlogic,simple-framebuffer",
 				     "simple-framebuffer";
