--- a/Documentation/devicetree/bindings/interrupt-controller/amlogic,meson-gpio-intc.yaml
+++ b/Documentation/devicetree/bindings/interrupt-controller/amlogic,meson-gpio-intc.yaml
@@ -40,6 +40,7 @@ properties:
               - amlogic,a5-gpio-intc
               - amlogic,c3-gpio-intc
               - amlogic,t7-gpio-intc
+              - amlogic,meson-sc2-gpio-intc
           - const: amlogic,meson-gpio-intc
 
   reg:
