--- a/drivers/auxdisplay/Makefile
+++ b/drivers/auxdisplay/Makefile
@@ -21,3 +21,4 @@ tm16xx-y			+= tm16xx_core.o
 tm16xx-$(CONFIG_TM16XX_KEYPAD)	+= tm16xx_keypad.o
 obj-$(CONFIG_TM16XX_I2C)	+= tm16xx_i2c.o
 obj-$(CONFIG_TM16XX_SPI)	+= tm16xx_spi.o
+obj-$(CONFIG_FD6551)		+= fd6551.o
